# tinkerp

./: README.md  cli.py  main.py  pyproject.toml
config/: checkers_and_rallys.yaml  loreal.yaml  unilever.yaml
schema/: customer_data_model.sql  symmetri.sql
symmetri/: symmetri_logger.py  utils.py
symmetri/agents/schema_analyzer/: core.py  llm.py
symmetri/api/db/: organization_repository.py  schema_analyzer.py  user_repository.py
symmetri/api/domain/: organizations.py  schema_analyzer.py  users.py
symmetri/api/server/: google_auth_controller.py  models.py
symmetri/api/services/: organization_management.py  schema_analyzer.py  user_management.py
symmetri/db/: base.py  factory.py  postgres.py  snowflake.py
symmetri/etl/: config_loader.py  data_generator.py
symmetri/etl/generators/: common.py  crm.py  data_providers.py  transactions.py  web.py
symmetri/etl/snowflake/: connection_manager.py
symmetri/llms/: anthropic_llm.py  base.py  factory.py  openai_llm.py
